<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rayonics.flickerfinder.SettingsActivity"
    tools:showIn="@layout/activity_settings"
    android:background="@drawable/mypattern"
    >

    <TextView
        android:id="@+id/settingsmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsmsg"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/threshold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threshold"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsmsg"
        />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toStartOf="@+id/max"
        app:layout_constraintStart_toEndOf="@+id/min"
        android:progressDrawable="@drawable/custom_progress"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintTop_toBottomOf="@+id/threshold" />

    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/min"
        app:layout_constraintRight_toLeftOf="@+id/seekBar1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar1" />

    <TextView
        android:id="@+id/max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/max"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/seekBar1"
        app:layout_constraintTop_toTopOf="@+id/seekBar1" />

    <View
        android:id="@+id/horizline"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/seekBar1"/>

    <TextView
        android:id="@+id/lightsensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lightsensor"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizline" />



</android.support.constraint.ConstraintLayout>